--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <h1>ResViz - MyImpact BibTeX</h1>
         <p>Source-code available on GitHub at <a href="https://github.com/ResViz/myimpact-bibtex">ResViz/myimpact-bibtex</a>.</p>
         <p>Drag this bookmarklet into your address bar: <a href="javascript:(function(){var s=document.createElement('script');s.src = 'https://resviz.github.io/myimpact-bibtex/bookmarklet.js';document.body.appendChild(s);})();">Import from BibTeX</a>.</p>
+        <p>If you have any difficulties please <a href="https://github.com/ResViz/myimpact-bibtex/issues">submit an issue</a>.</p>
+        <p>To add support for a bibliographic type please submit an example BibTeX file as a new issue.</p>
     </body>
 </html>
